Preparation of .gitignore for future dependency packaging

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
+
 *__pycache__
-dist
+
+# Build artifacts
+dist/
+
+# External packages (dependencies) are
+# installed by build process as directories
+# under top level
+mypy_extensions.py
+typing_inspect.py
+typing_extensions.py
+*/
+!input/
+!output/
+!util/
