--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,8 +4,8 @@
 		{
 			"label": "Package: test",
 			"command": "python",
-			"args": ["${workspaceFolder}/test_all.py"],
-			"detail": "Run custom test script",
+			"args": ["-m pytest --doctest-modules ${workspaceFolder}/grade_conversion_script"],
+			"detail": "Run pytest",
 			"group": {
 				"kind": "test",
 				"isDefault": true
@@ -13,9 +13,9 @@
 		},
 		{
 			"label": "Package: build",
-			"command": "python3.13",
-			"args": ["${workspaceFolder}/build.py"],
-			"detail": "Run custom build script",
+			"command": "python",
+			"args": ["-m build"],
+			"detail": "Run build (setuptools)",
 			"group": {
 				"kind": "build",
 				"isDefault": true
